[package]
name = "simplify-rs"
version = "0.1.2"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Algorithm for converting points to smooth bezier curves, ported from paper.js"
keywords = ["svg", "simplify", "bezier", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/fschutt/simplify-rs"
readme = "README.md"
edition = "2018"

[dependencies]

[features]
default = []
# Use f64 instead of f32 for all types
double_precision = []