[package]
name = "simplify-rs"
version = "0.1.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Algorithm for converting points to smooth bezier curves, ported from paper.js"
keywords = ["svg", "simplify", "bezier", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/fschutt/simplify-rs"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"


[features]
default = []
# Use f64 instead of f32 for all types
double_precision = []

[profile.release]
lto = true
